@@ -2,6 +2,7 @@ Version 3.2.0
 * Post DiFX-2.1
 * Fix for correlation of mismatched sidebands.  Requires contemporaneous
 upgrade of difxio.
+* Add DIFX_LABEL env var to FITS files
 
 Version 3.1.0
 * Version renumber from 3.0.2 prior to DiFX-2.1 release
